--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,6 +7,7 @@ html {
 }
 body {
   margin: 0;
+  background: rgb(255, 255, 255);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
